--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "grunt-sequelize",
   "description": "Sequelize migrations from Grunt",
-  "version": "0.2.1",
+  "version": "0.2.2",
+  "private": true,
   "homepage": "https://github.com/bencevans/grunt-sequelize",
   "author": {
     "name": "Ben Evans",
